--- a/roles/grafana/defaults/main.yml
+++ b/roles/grafana/defaults/main.yml
@@ -6,6 +6,8 @@ grafana_arch: "amd64"
 grafana_repo_url: "https://dl.grafana.com/oss/release"
 grafana_download_url: "{{ grafana_repo_url }}/grafana-{{ grafana_version }}.{{ grafana_platform }}-{{ grafana_arch }}.tar.gz"
 grafana_download_checksum: null
+grafana_version_semver: "{{ grafana_version | regex_replace('^v', '') }}"
+grafana_vendor_prefixed_dir: "{{ grafana_install_dir }}/grafana-v{{ grafana_version_semver }}"
 
 # System settings
 grafana_user: "grafana"
