--- a/playbooks/group_vars/vmagent.yml
+++ b/playbooks/group_vars/vmagent.yml
@@ -6,8 +6,12 @@ vmagent_scrape_config:
       static_configs:
         - targets: ["mysql-exporter.internal:9104"]
     - job_name: kafka-exporter
+      metrics_path: /metrics
       static_configs:
-        - targets: ["kafka-exporter.internal:9308"]
+        - targets:
+            - 172.16.1.104:9308
+            - 172.16.1.99:9308
+            - 172.16.1.105:9308
     - job_name: elasticsearch-exporter
       static_configs:
         - targets: ["elasticsearch-exporter.internal:9114"]
